.provarCaches/00D410000011HE0EAM/objects/rstk__sodmdpo__c.object
<CustomObject>
    <description>sodmdpo__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sodmdpo_soorddmd__r.rstk__externalid__c + &apos;_&apos; + TEXT(NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sodmdpo_soorddmd__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sodmdpo_dmdqty__c</fullName>
        <description>This field carries the Quantity Required of the Sales Order Demand associated with this Direct Purchase detail.</description>
        <formula>rstk__sodmdpo_soorddmd__r.rstk__soorddmd_qtyreq__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field carries the Quantity Required of the Sales Order Demand associated with this Direct Purchase detail.</inlineHelpText>
        <label>Demand Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmdpo_dropship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that the Vendor is to drop ship to Customer (defined by the Ship-To Address on the PO).</inlineHelpText>
        <label>Drop Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sodmdpo_poline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The PO Line that satisfies this &quot;direct purchase&quot; requirement for the given SO Line.</inlineHelpText>
        <label>Purchase Order Line</label>
        <referenceTo>rstk__poline__c</referenceTo>
        <relationshipName>polinesodmdpos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sodmdpo_poqty__c</fullName>
        <inlineHelpText>The quantity on the PO Line that satisfies this &quot;direct purchase&quot; requirement for the given SO Line.</inlineHelpText>
        <label>Purchase Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sodmdpo_seq__c</fullName>
        <inlineHelpText>Unique sequence number for these SO/PO demand records.</inlineHelpText>
        <label>Sequence Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>rstk__sodmdpo_soorddmd__c</fullName>
        <inlineHelpText>A hyperlink to the Sales Order Demand record for the SO Line that is driving the &quot;direct purchase&quot;.</inlineHelpText>
        <label>Sales Order Demand</label>
        <referenceTo>rstk__soorddmd__c</referenceTo>
        <relationshipName>sodmdpos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Sales Order Demand Direct Purchase Dtl</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__sodmdpo_soorddmd__c</columns>
        <columns>rstk__sodmdpo_poline__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__sodmdpo_poqty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Order Demand Direct Purchase Dtl</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>